# substrate-tlsnotary

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/: Cargo.toml  proof.json
primitives/src/: lib.rs
prover/: Cargo.toml  node_metadata.scale  proof.json  proofEncoded.json
prover/src/: main.rs
runtime/src/: lib.rs
