[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
tlsn-core = { git = "https://github.com/justinfrevert/tlsn", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["pkcs8", "arithmetic", "pem"] }
serde_json = { version = "1.0" }
subxt = "0.32.1"
subxt-signer = { version = "0.32.1", features = ["sr25519", "ecdsa", "subxt"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.0"